src/test/ui/parser/type-parameters-in-field-exprs.stderr
error: field expressions may not have generic arguments
  --> $DIR/type-parameters-in-field-exprs.rs:13:8
   |
LL |     f.x::<isize>;
   |        ^^^^^^^^^

error: field expressions may not have generic arguments
  --> $DIR/type-parameters-in-field-exprs.rs:15:8
   |
LL |     f.x::<>;
   |        ^^^^

error: field expressions may not have generic arguments
  --> $DIR/type-parameters-in-field-exprs.rs:17:8
   |
LL |     f.x::();
   |        ^^^^

error: aborting due to 3 previous errors

